# rustActixGraphql

./: .env  Cargo.toml  build.rs
schema/: preference.capnp
src/: lib.rs  main.rs
src/drivers/: mod.rs  postgres.rs
src/events/: aggregation.rs  mod.rs  reducer.rs  schema.rs
src/files/sql/: create_tables.sql
src/graphql/: mod.rs  mutation.rs  query.rs  subscriptions.rs
src/infrastructure/: kafka.rs  mod.rs  scylla.rs
src/persistence/: models.rs  repository.rs
tests/: integration_test.rs
tests/common/: mod.rs
