[package]
name = "rustActixGraphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
actix-web = "4.2.1"
async-graphql = "4.0.14"
async-graphql-actix-web = "4.0.14"
lazy_static = "1.4.0"
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-actix-native-tls", "uuid"] }
uuid = { version = "1.1.2", features = ["serde"] }