
[package]
name = "rustActixGraphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
actix-web = "4.2.1"
async-graphql = { version = "4.0.14", features = ["dataloader", "chrono", "chrono-tz"] }
async-graphql-actix-web = "4.0.14"
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-actix-native-tls", "uuid", "chrono"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["serde"] }


[dev-dependencies]
jsonpath_lib = "0.3.0"
testcontainers = "0.14.0"